--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,20 @@ jar {
   }  
 
   from {
-    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    configurations.runtimeClasspath.collect { 
+            exclude '.project'
+            exclude '.classpath'
+            exclude 'about.html'
+            exclude 'LICENSE'
+            exclude 'NOTICE'
+            exclude 'LICENSE.txt'
+            exclude 'NOTICE.txt'
+            exclude 'META-INF/*'
+            exclude 'META-INF/NOTICE'
+            exclude 'META-INF/LICENSE.txt'
+            exclude 'META-INF/NOTICE.txt'
+            exclude 'META-INF/DEPENDENCIES'
+    	it.isDirectory() ? it : zipTree(it) 
+    }
   }
 }
