--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 test {
     useTestNG()
 }
-
+version = '1.3.1'
 jar {
   manifest { 
     attributes "Main-Class": 'de.robadd.logfilter.Main'
