--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 dependencies {
-    implementation 'com.google.guava:guava:29.0-jre'
+  /*  implementation 'com.google.guava:guava:29.0-jre' */
 	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.11.0'
 	implementation group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.9.0'
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
