--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
 }
-version = '1.3.6'
+version = '1.3.8'
 repositories {
     jcenter()
 }
@@ -36,6 +36,13 @@ dependencies {
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
     testImplementation group: 'org.assertj', name: 'assertj-swing-junit', version: '3.17.1'
     
+}
+
+task release {
+    dependsOn build
+    doLast {
+        file("build/release/LogFilter-${version}.jar").renameTo(file("Z:/Postausgang/LogFilter-${version}.jar"));
+    }   
 }
 
 test {
