--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -33,11 +33,18 @@ java {
 dependencies {
 	implementation group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.9.0'
 	
-    testImplementation 'org.testng:testng:7.2.0'
+    testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
     testImplementation group: 'org.assertj', name: 'assertj-swing-junit', version: '3.17.1'
     
 }
+
+task copyJar(type: Copy) {
+    from jar
+    into '../release'
+}
+
+build.dependsOn copyJar
 
 test {
     useTestNG()
