--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -1,10 +1,9 @@
-plugins {
-    id 'java'
-}
 version = '1.3.8'
 repositories {
     mavenCentral()
 }
+apply plugin: 'java'
+apply plugin: 'eclipse'
 
 sourceSets {
     main {
@@ -27,12 +26,13 @@ sourceSets {
 
 libsDirName = 'release'
 java {
-	sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+     toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 dependencies {
 	implementation group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.9.0'
-	
+testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.2'
     testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
     testImplementation group: 'org.assertj', name: 'assertj-swing-junit', version: '3.17.1'
