--- a/Logfilter/build.gradle
+++ b/Logfilter/build.gradle
@@ -1,10 +1,11 @@
-plugins {
-    id 'java'
-}
+
 version = '1.3.8'
 repositories {
     mavenCentral()
 }
+
+apply plugin: 'java'
+apply plugin: 'eclipse'
 sourceSets {
     main {
         java {
@@ -26,12 +27,15 @@ sourceSets {
 
 libsDirName = 'release'
 java {
-	sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+     toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 dependencies {
-	implementation group: 'com.jgoodies', name: 'jgoodies-forms', version: '1.9.0'
+	
+	implementation 'com.jgoodies:jgoodies-forms:1.9.0'
+	implementation 'org.apache.commons:commons-lang3:3.20.0'
 	implementation project(':Core')
     testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
